--- a/practical05.ipynb
+++ b/practical05.ipynb
@@ -1,40 +1,55 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# 5. Perform different parsing techniques using Shallow parser, regex parser"
-      ],
       "metadata": {
-        "id": "7c9su8JrzsTH"
-      }
-    },
-    {
-      "cell_type": "markdown",
+        "id": "n_DGlSmq0XZs"
+      },
       "source": [
         "✅ 1. Shallow Parsing (Chunking)\n",
         "Shallow parsing identifies constituents (like noun phrases, verb phrases) in a sentence, but not the entire syntax tree. We typically use nltk for this."
-      ],
-      "metadata": {
-        "id": "n_DGlSmq0XZs"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WTIU6SvD1EZ2",
+        "outputId": "15ac9ac1-4ad6-4f80-ba17-4a616a134864"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(S\n",
+            "  (NP Gauri/NNP)\n",
+            "  is/VBZ\n",
+            "  working/VBG\n",
+            "  on/IN\n",
+            "  (NP a/DT cloud-based/JJ resume/NN)\n",
+            "  shortlisting/VBG\n",
+            "  (NP project/NN)\n",
+            "  ./.)\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package punkt_tab to\n",
+            "[nltk_data]     C:\\Users\\Gauri\\AppData\\Roaming\\nltk_data...\n",
+            "[nltk_data]   Package punkt_tab is already up-to-date!\n",
+            "[nltk_data] Downloading package averaged_perceptron_tagger_eng to\n",
+            "[nltk_data]     C:\\Users\\Gauri\\AppData\\Roaming\\nltk_data...\n",
+            "[nltk_data]   Package averaged_perceptron_tagger_eng is already up-to-\n",
+            "[nltk_data]       date!\n"
+          ]
+        }
+      ],
       "source": [
         "import nltk\n",
         "nltk.download('punkt_tab')\n",
@@ -59,57 +74,38 @@
         "\n",
         "# Print the tree structure instead of drawing it\n",
         "print(tree)  # Prints a textual representation of the tree"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "WTIU6SvD1EZ2",
-        "outputId": "15ac9ac1-4ad6-4f80-ba17-4a616a134864"
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "(S\n",
-            "  (NP Gauri/NNP)\n",
-            "  is/VBZ\n",
-            "  working/VBG\n",
-            "  on/IN\n",
-            "  (NP a/DT cloud-based/JJ resume/NN)\n",
-            "  shortlisting/VBG\n",
-            "  (NP project/NN)\n",
-            "  ./.)\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt_tab is already up-to-date!\n",
-            "[nltk_data] Downloading package averaged_perceptron_tagger_eng to\n",
-            "[nltk_data]     /root/nltk_data...\n",
-            "[nltk_data]   Package averaged_perceptron_tagger_eng is already up-to-\n",
-            "[nltk_data]       date!\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "SHm-8gvv0eFZ"
+      },
       "source": [
         "✅ 2. Regex Parsing\n",
         "Regex parsing is more flexible but less linguistically aware. You define regex rules to extract patterns from the text."
-      ],
-      "metadata": {
-        "id": "SHm-8gvv0eFZ"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JBrR4MSQ0ZYz",
+        "outputId": "1c862c9f-9f9b-449f-f21c-dd85bb32c2c6"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Emails: ['support@example.com']\n",
+            "Dates: ['12/05/2025']\n"
+          ]
+        }
+      ],
       "source": [
         "import re\n",
         "\n",
@@ -125,34 +121,40 @@
         "\n",
         "print(\"Emails:\", emails)\n",
         "print(\"Dates:\", dates)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "JBrR4MSQ0ZYz",
-        "outputId": "1c862c9f-9f9b-449f-f21c-dd85bb32c2c6"
-      },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Emails: ['support@example.com']\n",
-            "Dates: ['12/05/2025']\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "FVDb7vr61M_q"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": ".venv",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.4"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
